# SleepLabProcessing

./: .gitignore  annotations2edf.ipynb  hr_diff_df.csv  main.ipynb  motion_results.csv  pyproject.toml  rr_diff_df.csv  tmp.py
awake_analysis/: awake_accuracy.csv  awake_accuracy_per_session.csv  logistic_regression_predictions_379.0.csv  logistic_regression_predictions_390.0.csv  logistic_regression_predictions_391.0.csv  logistic_regression_predictions_392.0.csv  logistic_regression_predictions_433.0.csv  logistic_regression_predictions_436.0.csv  metrics_per_session.csv  motion_per_sample_with_ground_truth.csv  motion_with_gt.csv  sleep_onset_offset_results.csv  sleep_period_results.csv
models/: InBedClassifier.joblib  OutOfBedClassifier.joblib  best_model_tcn.keras  current_bed_classifier.json
models/RandomForest15Classifier/: Children0.csv  Children1.csv  Children10.csv  Children11.csv  Children12.csv  Children13.csv  Children14.csv  Children2.csv  Children3.csv  Children4.csv  Children5.csv  Children6.csv  Children7.csv  Children8.csv  Children9.csv  ClassProb0.csv  ClassProb1.csv  ClassProb10.csv  ClassProb11.csv  ClassProb12.csv  ClassProb13.csv  ClassProb14.csv  ClassProb2.csv  ClassProb3.csv  ClassProb4.csv  ClassProb5.csv  ClassProb6.csv  ClassProb7.csv  ClassProb8.csv  ClassProb9.csv  CutPoint0.csv  CutPoint1.csv  CutPoint10.csv  CutPoint11.csv  CutPoint12.csv  CutPoint13.csv  CutPoint14.csv  CutPoint2.csv  CutPoint3.csv  CutPoint4.csv  (+23 more)
old/: new_resp_results.csv  resp_hr_results.csv  results_summary.csv  results_with_ref.csv
(+38 files in other folders)
